--- a/Lab2/lab2/pubspec.yaml
+++ b/Lab2/lab2/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.9
+  connectivity_plus: ^5.0.1
+  http: ^0.13.3
+  flutter_bloc: ^7.0.0
+  flash_light_control_plugin:
+    git:
+      url: https://github.com/ZazaBogara/flutterPluginForLab7.git
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
